# STM32-MIDI-Controller

./: CMakeLists.txt  Githubworkflows  README.md  compile-firmware.yml  fetch_usbstub.sh  platformio.ini  velar_controller.ino
.github/workflows/: build.yml  compile-firmware.yml
include/: config.h
lib/cd4051/: cd4051.cpp  cd4051.h
lib/midi_bridge/: midi_bridge.cpp  midi_bridge.h
src/: main.cpp  usb_midi_if.h  usb_midi_stm32.h  usb_midi_stub.cpp
